use loom docker image